ajout detail produit

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
       <a class="p-2 text-dark" [routerLink] = "['/']">Accueil</a>
       <a class="p-2 text-dark" [routerLink] = "['/formulaire']">Formulaire</a>
       <a class="p-2 text-dark" [routerLink] = "['/produits/catalogue']">Catalogue</a>
+      <a class="p-2 text-dark" [routerLink] = "['/produits/panier']">Mon panier</a>
       <a class="p-2 text-dark" [routerLink] = "['/compte-client']">Mon compte</a>
     </nav>
   </div>
