--- a/src/app/produits/catalogue/catalogue.component.html
+++ b/src/app/produits/catalogue/catalogue.component.html
@@ -7,7 +7,7 @@
     <b>Téléphone :</b> {{p.tel}} - <b>Prix :</b> {{p.prix}} 
     &nbsp;&nbsp;&nbsp;&nbsp;
     <button (click)="addPanier(p.tel)" class="btn btn-outline-primary">Ajout Panier</button>&nbsp;&nbsp;&nbsp;&nbsp;
-    <button (click)="addPanier(p.tel)" class="btn btn-outline-info">Plus d'informations sur ce produit</button><br/><br/>
+    <button (click)="voirDetails(p.tel)" class="btn btn-outline-info">Plus d'informations sur ce produit</button><br/><br/>
 </div>
 </div>
 </div>
