--- a/src/app/produits/detail-produit/detail-produit.component.html
+++ b/src/app/produits/detail-produit/detail-produit.component.html
@@ -1,1 +1,7 @@
-<p>detail-produit works!</p>
+
+<div style="text-align: center; margin-top: 2%;">
+    <h2>Détail du produit :</h2>
+    <div style="margin-top: 2%;">
+        {{idProduit}}
+    </div>
+    </div>
