--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,4 +10,6 @@
       <a class="p-2 text-dark" [routerLink] = "['/compte-client']">Mon compte</a>
     </nav>
   </div>
-
+<div style="text-align:right; margin-right: 2%; margin-top: 2%;">
+<b>Nombre d'articles dans le panier :</b> {{ nbElementPanier }} 
+</div>
