--- a/src/app/produits/detail-produit/detail-produit.component.html
+++ b/src/app/produits/detail-produit/detail-produit.component.html
@@ -2,6 +2,6 @@
 <div style="text-align: center; margin-top: 2%;">
     <h2>Détail du produit :</h2>
     <div style="margin-top: 2%;">
-        {{idProduit}}
+        <b>Nom du téléphone :</b> {{idProduit}}
     </div>
     </div>
